<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <Button
        android:id="@+id/btn_myLocation"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/myLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_address" />

    <Spinner
        android:id="@+id/sp_custom"
        android:layout_width="100dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/btn_ble_setting" />

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_listview_go"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_listview_clear" />

    <Button
        android:id="@+id/btn_ble_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/ble_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_listview_go" />

    <Button
        android:id="@+id/btn_listview_clear"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_myLocation" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@drawable/white_border"
        android:ems="10"
        android:hint="@string/EnterAddress"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ble_setting" />

    <ListView
        android:id="@+id/lv_address"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_map" />

    <fragment
        android:id="@+id/gps_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>